// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayViewComponent renders a day with many rehearsals 1`] = `
<div
  className="ui container"
>
  <h2
    className="ui header"
  >
    Sat, January 20
  </h2>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Back to week
  </button>
  <div
    className="ui segment"
  >
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      13:00 - 14:30
    </button>
  </div>
  <div
    className="ui segment"
  >
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      14:30 - 16:00
    </button>
  </div>
  <div
    className="ui segment"
  >
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      16:00 - 18:00
    </button>
  </div>
</div>
`;

exports[`DayViewComponent renders a day with one rehearsal 1`] = `
<div
  className="ui container"
>
  <h2
    className="ui header"
  >
    Tue, January 15
  </h2>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Back to week
  </button>
  <div
    className="ui segment"
  >
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      19:00 - 22:00
    </button>
  </div>
</div>
`;
